--- a/mgutab.d/50-doujin-oneshot-and-serial.2
+++ b/mgutab.d/50-doujin-oneshot-and-serial.2
@@ -1,6 +1,7 @@
 begin-base64 600 -
-KLUv/QRYjQQABAgjIyDlkIzkurrnn63nr4cv6L+e6L29SUkKIyMjCndlaWJv
+KLUv/QRYpQUABAojIyDlkIzkurrnn63nr4cv6L+e6L29SUkKIyMjCndlaWJv
 OjY5OTQ1MDQ0MzYJ5LiJ5pel5pyI5a2k5LqRICjnlLvnlLvlirPlt6XlkpUp
 CTIzdzE2OTQzMzcxMjIyMjEwMTQzNDAyCeWHoAkzbQnku6Plj7fpuKIsIOe6
-r2JnCgUARRiOlBEAISBkdRzcGTtZzHw=
+r2JnNzY5MTg3MjgxOAktRWRlTi3lspsJNG0JZ2zlkIzkuroKBgCvyK0Iw5Ey
+AiAEhKyOgzsDdmRvjw==
 ====
