--- a/mgutab.d/70-game-official.1
+++ b/mgutab.d/70-game-official.1
@@ -1,5 +1,6 @@
 begin-base64 600 -
-KLUv/QRYKQMAIyMg5ri45oiP5a6Y5pa5CiMjIwp3ZWlibzo3NjM1MTcxMjY0
+KLUv/QRYMQQAIyMg5ri45oiP5a6Y5pa5CiMjIwp3ZWlibzo3NjM1MTcxMjY0
 CemTuOS7meS5i+WigyAo5LqM5qyh5YWD6JCM57O75Y+k6aOO5YW75oiQ562W
-55Wl5Y2h54mM5omL5ri4KQkxeQqrcgxL
+55Wl5Y2h54mM5omL5ri4KQkxeQp3ZWlibzo3NjI1NDY0Nzk1CeW9t+W+qOS5
+i+ihlwk4bQrUqwGk
 ====
