--- a/mgutab.d/30-well-illust.1
+++ b/mgutab.d/30-well-illust.1
@@ -1,10 +1,12 @@
 begin-base64 600 -
-KLUv/QRYJQoAlpNJNUDL5sifFUXR3esWyKuJgQuJt7Zf5LNGg1EAJOTrFCLm
-Hq/YlAk7tkVuKaVEpXWo11UGMgMCPAA8ADgAlZ9w3i03Kc3V4hq57mCxxs33
-EKVN6ryGNajG1Ee6nRpn201rAyQPiIFCI8uyhqMUQWoU0W6BW+QasSwLdV6r
-MbbchYb8xN98pFM9MaaYZgrpFWptC8w+ed4zeQzgE98kfqr0HrnuSDiQIDwK
-IAIaNjq9LJ9/CF8MlXc8a65U00yxa1CvQT24GivCJ302uBp9alox11Vtt22D
-DBBsnjPG3b104s5ou8KtYZ7nCrfnuQ6NyPUL5hdUI4hhWzC7ApYOE6UEBtli
-lW71pd28ddoT6E3hXzhPcSE3U/gZodKz5Sju8s10ldmdzAsMCQBabb/eFyRs
-tlLE+dlByBt8jW2HO5D4LVNQWZTbqw==
+KLUv/QRYfQwAhphaO0BpnQMkaXMMw/OFrl08YLzvqCksO46Eh9NRfBSw7PrS
+Z7nErzm9pshFUHb+6ha5k5QS1b1uva4yGBsRTgBIAEgABiQHHgQgASyKYhQ+
+THwF96LKTyS+KybnvLQ6jdhulEpghPYOPtmTeYtq+EALTewqsd+ayVoBSB6Q
+AgoYVVUxGp8HouXQyaYtd04gVVUBFNfruiACBlx9r3tm7ZSeocgnLluUw3Hi
+ssPRmEpbsXvFLGBETfQRmtgTS/fp8zp4Qo4pe5c80rxm8hSDJvqQ6C0+3xHb
+jQQBDSKMEC5EU2nsiu3MpKWyjjYf4t4i8RIs4hXi/gJn7Fux6dm1d5IgcgYi
+3CrfLumlE887vTHdY7rfSOAE7j0TeSOBLfGkjmUBjAjWm4sHMRi/7is0PKji
+u0zue3EmMYzV20AgeXQo/Igigir/4YSa7j3vvy60qK8LPe813VMuYkuXGaaT
+XrdcfsEHbij54ZIr2xgLABI0Gw6q/Wi1/XpfkLDZShHnZwchb/A1th3uQOK3
+TEEB/W1W6w==
 ====
