--- a/mgutab.d/30-well-illust.1
+++ b/mgutab.d/30-well-illust.1
@@ -1,13 +1,14 @@
 begin-base64 600 -
-KLUv/QRYVQ4AFp1nPDBpahskZaShoAAp///hSSrhzHE2PMSyoZJT22Y017/6
-eDqUMPHl1K+8YlFyCEExiezu7jPZsKRSUGDhYFwAVABYAA5vAeCYvmR6i9G7
-pLojgYHJAUhDREDDmuD0Q+cptjdp7yDxTm+UEk9qp6S6A4UCIzj/YLRFmm9Y
-lQ+04IROY7aYZpHSABNIpIACxnVdDMeoImxYQjv12SEVaF1XNk48ZZZYWs90
-n+n+cwInbC/q7M8J9JjltDebmWIYFhlAAHOMrc1qldFqJrZq2w3r8VBt+/Hw
-PGOl2Vp6LWRCjukjOKHLHK2VVmKLSINS28NsbvOblJCk/QikN9173n+dblhf
-pz3vN91TMKFHG7M85cT2gvkFH+ih7AfM1j4rBxFWEC7CFGrlNFeZxToj5Txf
-2v4i8RIuIVba/gJo5ZheaTNcsTxBbA2E/mjvAQzJdc17zfvv0xbuOZBuiDAw
-OLbZxLVeLDsVuoMCMa9S0uzWiOd2oSvac5uQwUh7tVnGF185r3suntRg9XVf
-ofIkiu802zHOWbz5UuxAMIGEKDwXDgB+drjgLVZKsgTN3oNqk1ptv94XJGy2
-UsT52UHIG3yNbYc7kPgtU1Ag7Kqk
+KLUv/QRYRQ8ABp9tPDBpbA4kKeBgYAgmjGA5G6DFm1Xd8sdfk63vpI231fGc
+5oFJR6I9X90RYuAZgmJESimllOyi/atJQerlcmIAWQBdAF9md5znUP5i6Jze
+dPoL0rvEugNBgYkBiEMkAHZRdOKD5yu4P21PkXivWM6Zab1UYt2RSoURnW9A
+2qPNY5cFDC86o1epb66arBXABBIhkIDRaDQYDpLFiF1EWwXaolV4NRoB2eaJ
+gtgbCBG0vV9JM5165nld473GexAqjMD9yLNBqNClnvRijeqaZVlEwIDMc75X
+s3bKu6HYK25j1+Ox4vbj4ZpKW/W9FVfQjJ3TR3RGn1reO+/Ml5EYUu2b7Tlr
+TWKNa3YcmEBEEr6rjKXtSSGR4/33PeiJ2AV64vc9x/tKZnR5pabppPliMq8A
+DD+V/ZDZG6g18aDlgDWqUi2v2k5NWipr93kT9xiJh4AZMxP3FkItzxXPqwWM
+i8gl2B0T2/Yom8IF7BpZtkfZXjHVqrY05+377XsQFC/ddyHRIdLQ4PlqNFuL
+8/RYiJ5UmLmds2rYykw5lmjZvuOMC0ii26vpjDOeFPuH9SUGLdD7CZYvVbwX
+EAAwIPmJhu387HDBW6yUZAmavQfVJrXafr0vSNhspYjzs4OQN/ga2w53IPFb
+pqBgsj6u
 ====
