--- a/mgutab.d/50-oc-oneshot.2
+++ b/mgutab.d/50-oc-oneshot.2
@@ -1,5 +1,7 @@
 begin-base64 600 -
-KLUv/QRYxQMA5AYjIyBvY+efreevh0lJCiMjIwp3ZWlibzozNjI3MTAwNDAx
+KLUv/QRYfQUAJAojIyBvY+efreevh0lJCiMjIwp3ZWlibzozNjI3MTAwNDAx
 CeeOm+WTiOWwj+iPsgk0bTIzMTE0OTM3ODMJRXjphaXmnaEJNjU1MzgzOTY4
-MDEJ5rK+6Iqx5oO56I2J5pyoCTZtCSPllJDlsKcjCgIAgSJMSKagVBu9LA==
+MDEJ5rK+6Iqx5oO56I2J5pyoCTZtCSPllJDlsKc1ODYxNzA4MDU4CeWFieaA
+qumZhueriyAo5L2g55qE6Zi/5pel5ZOlL3Jpcmlvb29iKQkxeQoDAHUDeYEi
+TEimoMnmI/U=
 ====
