--- a/mgutab.d/30-oc-illust.1
+++ b/mgutab.d/30-oc-illust.1
@@ -1,5 +1,6 @@
 begin-base64 600 -
-KLUv/QRYSQMAIyMgb2PmkbhJCiMjIwp3ZWlibzo1NTA2MjMyMTgxCW9tZXNo
+KLUv/QRYOQQAIyMgb2PmkbhJCiMjIwp3ZWlibzo1NTA2MjMyMTgxCW9tZXNo
 aTg0NzIgKGhldmlfbWlycm9yKQk0bQliZwp3ZWlibzo3NDc4NDU1NTk4Ceeb
-kOeiseaAp+iKseWNiS/nm5DljYkJNW0K167akw==
+kOeiseaAp+iKseWNiS/nm5DljYkJNW0Kd2VpYm86NzUyNTAzNjE4Mwnmn5Dn
+rJEyMzMJNm0K4fWgGQ==
 ====
