--- a/mgutab.d/30-well-illust.1
+++ b/mgutab.d/30-well-illust.1
@@ -1,14 +1,15 @@
 begin-base64 600 -
-KLUv/QRYLRAApuByPzCLqA0AbJIy4GBgQBf1aGLYd0K65WFmBfQDXvlW6H+p
-EI9ANcRQxSP5nnuYYCFbmIfZkiu7+2zb36kw0LJwMGgAXgBjAE4xwiGRrG0y
-1vlO5isAHtOXTE+B9I2ZTUlgQOJABMRFwKTqwHDF5z2uN1mf0fiW9UHoUdKI
-mU05nbgMzzsg5RHnJ5Vm4yh4upbPUpf3SRlAIuJSQIGDRCJxoJA+ugmFKIuA
-sgjFVRJJldL1GUKpdlkhvT4dhlxkzgUGWd/0RY/QQoe0MbLHyB4Uwkm4fvTJ
-oBCun4WR1hutrFQqlwEEKu1O6Z0TPsrpyKgrTyqLBXVli6VtfFNaSmXFgNF5
-TJ/h6RraRymkMBXG2hsjD9IgtWVvQfMgHp9xcrvb+6qt0ikIJCJEEx6b6ECs
-J4VwJ3tN+y3Dk2rLsKZ9J/uJTdePvmsjjE4tNr9g4zYmcsUmW6AUB4TUg5FO
-5JRqaSe8b8YnsY0vXW+h8REsutc12tAY2igtVbq+AgfuKWV0e+FzUWNqUzis
-nGXyBQ2TaqTJWSa3rPFKO6O7pb2l/bZhCuyxEIa4PDy00xt9zurw84E/J67S
-E0J563werxGssR7rdAxIuCe91qsHEwBVbT9l7ABBLgxIfqJhOz87XPAWKyVZ
-gmbvQbVJrbZf7wsSNlsp4vzsIOQNvsa2wx1I/JYpKHb5ras=
+KLUv/QRY5RAANqJ4QSCLuA0gYks5AUIA3PDdAuf5kCZbdWl5mX1iyAmUAv+H
+CIxyFjNYRiMTOmmQwAi+JhF4WWR3d/f7giOkAQbwLQwCbABkAGcAsNZY460Y
+6RDJ5jZb63wn8xUAj+lLphchvWOoUxQcmEAgEXERYFUemrb4/Ef2JuwzG+/T
+whivnFViqFNOJ0/D8w9Ie8R5q9J0nojn8wlxvTPDOQNMSFwMLHCYTCYOFBLI
+Z1WINgloi1BeNZkEGseXsr/YeAkX31XKPkMo5XfaWPOlN45gbA6GBmHvFcor
+I443Vs/YPmN70Ig3IfvRZ4NGPIc4ymqzxPO6rguBApffW2umNMLK8diobFuV
+xYLKtsXiWEI6ca3TYsj4PKbX8HwecVqDvdb5GpC005rxtddGaZ2j5EMcpLrt
+LWg+5OM3zvZ7cYYW23kpCSYkRBReo/hCsCeFdGd7jvtu01bVbZrjvrM9xeZz
+WGHGMspbLzbPoPM4KLbFZmOgVEeEFISSj+SU8olpzJBKOAMOGOtXZcADxEPl
+AeJymrOUEkc5s2y0wTHVUVyqlH2FDu10TnlxjvCKHGOd0oHtLbMvaLCqkWZv
+me3Tyjwxlfdi3GPcd52u0F4L6YhLpeK3ZnkptTd+QPTn5F1OY5zZUnhlVhIT
+AFUhP2XsAEEuDEh+omE7Pztc8BYrJVmCZu9BtUmttl/vCxI2Wyni/Owg5A2+
+xrbDHUj8liko8woSmQ==
 ====
