--- a/mgutab.d/50-doujin-oneshot-and-serial.2
+++ b/mgutab.d/50-doujin-oneshot-and-serial.2
@@ -1,7 +1,8 @@
 begin-base64 600 -
-KLUv/QRYpQUABAojIyDlkIzkurrnn63nr4cv6L+e6L29SUkKIyMjCndlaWJv
+KLUv/QRYHQcApAwjIyDlkIzkurrnn63nr4cv6L+e6L29SUkKIyMjCndlaWJv
 OjY5OTQ1MDQ0MzYJ5LiJ5pel5pyI5a2k5LqRICjnlLvnlLvlirPlt6XlkpUp
 CTIzdzE2OTQzMzcxMjIyMjEwMTQzNDAyCeWHoAkzbQnku6Plj7fpuKIsIOe6
-r2JnNzY5MTg3MjgxOAktRWRlTi3lspsJNG0JZ2zlkIzkuroKBgCvyK0Iw5Ey
-AiAEhKyOgzsDdmRvjw==
+r2JnNzY5MTg3MjgxOAktRWRlTi3lspsJNG0JZ2wwMDk5NTM1OTQJ55a+6aOO
+5Ye75Y+RICjlj5Hph4/lpLrlj5YvZG1vbXV6aSkJNm0KCABKCdBpY7wiiyKM
+QcpYgDoQsjoO7gyaOt3L
 ====
