--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,9 +1,10 @@
 begin-base64 600 -
-KLUv/QRYTQgA9A4jIyDlkIzkurrnn63nr4cv6L+e6L29SQojIyMKd2VpYm86
+KLUv/QRY3QkAlBEjIyDlkIzkurrnn63nr4cv6L+e6L29SQojIyMKd2VpYm86
 NTgxNzM4OTI1Mgnnmb3puJ9VTUkJNG0J5Luj5Y+36bii5YiY6L6pNjcyNDk4
 MTE1Cem2tOimi+W8pW5pZXJhdXRvbWF0YTYwOTc4NTI4MDIJ5byA54Gr566t
 54is5aKZIChsaW5oZV8wMCkJNW0xMzEyMjk0NTUJ5p2l55O26Iqx5qSS5rK5
 ICjlpJrlkIkvZHVvamkpCTVtCeael+WhnjgyMDIxNDc2MAnmspnotbDkuI3n
-lKjlkIPppa3lkJcJNm0J6Iif55+t56+HCggAeBBA0sYhxkCKarZ6mBSEuEos
-GYZwBjkPYDE=
+lKjlkIPppa3lkJcJNm0J6IifMzYwMDYxOTIJ54WM56W6T25pYmkgKOiInykJ
+NjIxMDIyNzY5NjcJ5qKX5rKzCTZtCgsAKSOjMobhrnXCg7CSNg4xBlJUs9XD
+pCDEVWLJMIQzBBWiZw==
 ====
