--- a/mgutab.d/25-oc-oneshot.1
+++ b/mgutab.d/25-oc-oneshot.1
@@ -1,6 +1,7 @@
 begin-base64 600 -
-KLUv/QRYmQQAIyMgb2Pnn63nr4cv6L+e6L29SQojIyMKd2VpYm86NjU1NjI5
-ODk0Mwnmt7HlpJzmj7TmrYwJNG0Kd2VpYm86MjE2NTE3ODQ2NQnpmL/okpnk
-uI3kvJrnlLvnlLsgKOOAiuaet+mUgeOAiykJNW0Kd2VpYm86NjA4NTQzOTky
-NQnlroflrpnni5fkurrnjosJNW0KT2PYHw==
+KLUv/QRYlQUABAojIyBvY+efreevhy/ov57ovb1JCiMjIwp3ZWlibzo2NTU2
+Mjk4OTQzCea3seWknOaPtOatjAk0bTIxNjUxNzg0NjUJ6Zi/6JKZ5LiN5Lya
+55S755S7ICjjgIrmnrfplIHjgIspCTU2MDg1NDM5OTI1CeWuh+WumeeLl+S6
+uueOizE3Mzg3NDgxMjAJ5qGD6Lev5p6c5a2QX5mo5pifOG0KBQAgNFgYw6M2
+dlZEI8nUHje0ne4=
 ====
