--- a/mgutab.d/20-orig-noncomm-serial-and-oneshot.1
+++ b/mgutab.d/20-orig-noncomm-serial-and-oneshot.1
@@ -1,7 +1,8 @@
 begin-base64 600 -
-KLUv/QRYvQUANAojIyDljp/liJvpnZ7llYbov57ovb0v55+t56+HSQojCndl
+KLUv/QRY9QYAVAwjIyDljp/liJvpnZ7llYbov57ovb0v55+t56+HSQojCndl
 aWJvOjU1MDE3MTQ4OTYJ5qW95byMX+aAneaFlSAoKQk1bTY5NzU4MDY3MQnl
 g6fkuInogIHpsbwJNjExODQyNTY0Mwnpmo/miYvkv53lrZhTRSAoc2F2ZS5j
-b20pCTgyNTM3MjI1NDA3CeS9oOaYr+S7gOS5iOWSmuWSmgkxNG0KBgCNijyI
-KoMqkjFHiMzhTQMnvn45+Q==
+b20pCTgyNTM3MjI1NDA3CeS9oOaYr+S7gOS5iOWSmuWSmgkxNDE1MzIxMjQ0
+CeWSleWZnKSn5q+b5oCqICjlkpXllrUpCTltCggAKbliqU0aFSEQVTBVJGOO
+EJnDmwZO+M/E4g==
 ====
