--- a/mgutab.d/51-oc-illust.2
+++ b/mgutab.d/51-oc-illust.2
@@ -1,14 +1,15 @@
 begin-base64 600 -
-KLUv/QRYxQ8All9zQCCpWAdIph4gCCCjwihZ4f9mC9zVPKb6rXCOIEr+gzMF
-OOqTG3Th/CJzQQIAV06KmAgPESGpXGEjR3eAAIuPEAFjAGQAYQBXHUPP6XCK
-s6xemJZpd6OeklfYeFPoQT5/QPKNSRaV2RNpMeLPED99Pp445fCttWK7aQ8Z
-vWgwtgZjW6oCAgZouhf5NHiiR6amnGYxZ3HlLICMgQZMAkqlUqEsLKA+z5Cp
-KpUZ5NQmpA5PTi9sy67VKr5kHBowBCxPyUFzW6qyzB/gix0fOb7C6EESmmIb
-vm69+NLoJTR5EoiUJaJxQHLLM7dnbsszd3hyi0LIMwgwDgcslcinIzxSZ7cn
-ymyWniHDKckgJK8B2MZtGxlPSmhTxtNss1rFuGJMLxUjuvO4hO7PDrc2vi+F
-GoPBg0Y7gKUaITfYYIchPS54iq/FKt7wVYDRCeF/xP+EXlI4p+I3m7coM83w
-tZrNLBaB/AryNSCcZPyvJEOYAZSHjXqUzvnQnkh3XaoT+ud7kpknynz6nCTi
-LUD3RJrjzCUmp/XiOHxl29XI2GPHKxHkIsjHjlsqU+hFzV+AqdFFaoPKIRba
-U/ITtUtUplfTrNW27AIpNgTy6a334iwNAGRZ/GUpoY8BK7/tHQonL741MYR0
-qiHjmNFmKPSISWJwReDCTEEBob2/GQ==
+KLUv/QRYxRAABiJ6PyCpOgdIph4gCCCjMdv8Gv8GsLZU11auuBSYLMh2k1iR
+5IoSkAqEF8GLM8jKYWBgga1E5JYiV/0fIw0wgPMIGmoAawBlAAsZj0n+QPnM
+Jkh6D4dLXOvMNFvt3SQo5RNOryL9R+cgKO+0cknMm5IeRbwrxFedgycuOXzn
+nJhu9qHKCwdjczC2BSsgYABH8yKd9k60adSSsxRzFE+OAsgYaGBIQKlUKhQF
+BVboFzJYpRIahPArwteA8BLwO5MMMeYPl26F+lu5zLStXmonvmQcGhgIYEAp
+98ZtwUQxe3g/+ji48RNML5LQUttwdufFmZWXr/UlEC+MCMcByjGbcW/GjdmM
++1s5hoTkGQQMDgcsmEinIzpeLs2eEPOY+ltkZXmtpdRuNfMo9oPw5Z334qpt
+3HbK+FBCqzJe1o3aifHEWF4qRrQG5BE07+JwzKn71KcxGLzItANYsJFwew32
+R9Lggpf4Um3iDV8FmpTwfWj0oc9FCvdUfKfzFmKWFV9qaaUBlIdNglLeInmQ
+8GVW79WqRrU75Ym1PbyXtBuu1k5t0g7RPR56U9Iazevzeah71JgnxLzqvCTi
+LTzflPSGK5uoXM6M43BWt6uRscGPYyORj0QOftyCqUg/4vyF9zJdvDqsHGKh
+QSl3sQIPAH1IIAG3TRbKSZZi+xiw8tveoXDy4lsTQ0inGjKOGW2GQo+YJAZX
+BC7MFBRvI/Yc
 ====
