--- a/mgutab.d/70-game-official.1
+++ b/mgutab.d/70-game-official.1
@@ -1,6 +1,7 @@
 begin-base64 600 -
-KLUv/QRYMQQAIyMg5ri45oiP5a6Y5pa5CiMjIwp3ZWlibzo3NjM1MTcxMjY0
-CemTuOS7meS5i+WigyAo5LqM5qyh5YWD6JCM57O75Y+k6aOO5YW75oiQ562W
-55Wl5Y2h54mM5omL5ri4KQkxeQp3ZWlibzo3NjI1NDY0Nzk1CeW9t+W+qOS5
-i+ihlwk4bQrUqwGk
+KLUv/QRYVQUA9AkjIyDmuLjmiI/lrpjmlrkKIyMjCndlaWJvOjc2MzUxNzEy
+NjQJ6ZO45LuZ5LmL5aKDICjkuozmrKHlhYPokIzns7vlj6Tpo47lhbvmiJDn
+rZbnlaXljaHniYzmiYvmuLgpCTF5MjU0NjQ3OTUJ5b235b6o5LmL6KGXCTht
+Nzk1NzgwNTU4CeW9kum+mea9riAo5pqX5Y+3556zKQk0bQoCABAlg6SKEAXy
+/Ray
 ====
