--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,12 +1,14 @@
 begin-base64 600 -
-KLUv/QRYHQ0AthhePyCLuA0i+0IIQGiGY2pDVC9KNy89wqsagOQP7O8f1WOI
-TCDATdolPIdJ+NwAjbEUMKFjt1e6RXqeHw4QMPyEV08ATgBJABQZd5cNMxJ5
-Tcbu4BE6ldLebGpV48P2eC8yhR8WfyEk5VzmEZYAIVOI+mifdF6LadJSiMzE
-dkEgsSxLEoFCbdDIpjTg0KSQPp1Sm+8rywozTguy8B0Q6Bz1yUYgkwVQHHxP
-AeOvCqQERsAAN1RsDwl6VAF0SrM7p8QkR30So8RlAGYrcFUf0WvwNGlDZ1Cg
-E4i8z2gntdqNFVNgLhNXlTtsyR32rMpbb2YzyqEEdkSga/VWbc4oZ/VJyNtX
-tU1sGACnkd4w0D6vrDFWLORt56p3vieNwgXfY+DoB6ZUh4f9KYEeq5bJEo76
-ZMMJRzzhVU34XqPiNSCpDSf0amcmL4ZlDuBswLPxGaTd0WiLjofggZ8Q/cGx
-XVo5rcQi1byL9y4+dxWKRO4wlzvMUXJXyR22BA4Alcrf/caUPhuknrjKGLC7
-1gkPwkraOMQYSFHNVg+TghBXiSXDEM4dli+H
+KLUv/QRYTQ8ARp1tQSCLOgdEihcAEgC4ig2o1DO8K/Dqc2qdoZPfhqpt/mOI
+LDQYA+ceBAbpwkoROeqjqDbF81JKkb1F/R8LrxIg9sMiXQBdAFgAI/srl6vN
+WHP3i/hCTsT4iRpwkxrZnQ3zA+R8S2nWXsWXY4MpIjfKdYZU7AoisQ+9t1wI
+nFwnyah/tVXnDtNsAXAyoIbBRNO0iYWExDSVmJUHHl116jBYzFPuTNMCtzuR
+5of3Q+VWpc6JclsA9QiuGEuDOWrx5y72aOVqNlHYIRP/0D4FRMAZC1QglBtD
+Y2/Zq8UtNDgGChNkQk+V+Fvr6VppR0P7FI6D0BzYgAm2bITaHWRXrfqFBl0i
+ZqjTK1j7Q/KRSA/xMJ9mWjPtOItJ0iZJexQdKhCj+IWj+IWVUXQYxe+yZaP4
+XUbxe+9SfbWXPZuhxUMo/vjqi2vlaL1POZHmloEZcDMAluoeB/2rppfjAhMD
+mQ/tjy64abXLEj+RekaJd5B4Rok/xp7OlVKL7cdrf1h7ouwWEviGwTwIeAhg
+wXxEJ4bEfqxvtdart3pAZ4no3LKLcnNQ7M4r5gGdf3P1qO46zoJvVCBa7Q1V
+EQBAhNFGXlwwXKXyd78xpc8GqSeuMgbsrnXCg7CSNg4xBlJUs9XDpCDEVWLJ
+MIQz7f/6Fg==
 ====
