--- a/mgutab.d/25-oc-oneshot.1
+++ b/mgutab.d/25-oc-oneshot.1
@@ -1,11 +1,13 @@
 begin-base64 600 -
-KLUv/QRY5QsAppZVPECJtg0iu2kURQfEiEVvt6LdZlVPlIf+rjJJ1ctlrdg3
-LhDCgcEzQ7fDrssm0ipyaWV39zqSoeOOg/h7AUcAQgBDAJtC0iFBocZDjVtI
-yBQwbwy6p/KJ9lZMSXvlPFAjltkRFmwOQ3vfjrQ+/nmtvQuRhgcHiEcURY8B
-Gxvd4ukAJhue6XgVgaIoObt41u0QzFvFjvVvvZheOnFX2RlbgSyjOcvefF3i
-suM0Ja4UppS8FPBOJze4+KbRE42Odv7TavF0bYRckg5L+3yWHafjhCWmav1q
-PU9L0Mdhebbn6Y8jWmqx/EstvRFiPeAVii1BDwwOBgjgKYCAODG19O//R0iE
-udiXTc80HXJ0JEFbGI+I/8dwsiSjT1x8Jiw4VsGxS9fgaAUOQ1sUjXWyQqTm
-S/mSoni69c65EFE1VNUEEUFQSZCWQGtIbAgOdmeiKWCeoOkMGPATDACnVhje
-dq9gtOITIlbpy02D1oAEXA0WxvCojZ0V0UgytQcu2A9d
+KLUv/QRYzQ0AJttiPDCJuA0kJXlERFTpHZk0bw/1GxYEqqMffF/5J0tLgS7m
+NizC0X6nNhGGzQhY2YQYkd3d3c1OwYJKQUEf51UAUABTALvaqyW+EVKRdEyw
+kNvwCklHNXlY97B+IeG7iD4NA5YyYbzY6jwvnhTCRsuHR0jANRm/cTxWu/Wm
++F68EGl4cIh4UBT1GEAigZsSCIAS6h9OtyITRQUEtAwgIFJdb9147x0hlAeD
+d0Lghb03eqqaNO+7Kv3icE/0aRmPdmOLdcWVak6Ga2gFrs9rNjzEgRMdHiWd
+2mZd86xY9K77FFS6BnoK6OOlO59CzHTPuWeuWmKLKV2QsBosS0ZEDljVhCH4
+jQnugAHvKH8RfRNAIINHFHI0H6WeOlu77d22ryaOY1Li2/YcR7z16rlxvRVH
+yKRBz1TwanpgcDAQD4gbu+6zoIQkrZeyMO56tcYX56xlQpLWM8xnmI+25jul
+xJpKKUvbL4DwD66PU15LaZ0zS+y9PaNPogFSYIQUF92SdUsH3Bi9gibjJ5e3
+dAEPAInuVmp3A9gkp7YxvE1ewbjFJxisUpKbhqIBCbgaLIzhURs7K6KRZGoP
+UBylSQ==
 ====
