--- a/mgutab.d/30-oc-illust.1
+++ b/mgutab.d/30-oc-illust.1
@@ -1,14 +1,17 @@
 begin-base64 600 -
-KLUv/QRYVRAAJmBzQjDLpgMQWpPbDwoKQl92pGEowcRgeqtOoh0K3XmhTATt
-Ks5T+LYK7V3r7q6B/VFae45i8EuZZJJSJj1tq6uDgZ0OBmAAYABjAFwn9Xcp
-3SfHCEtOV6TScaQ943PomfNIyIpI1xoJWRSJSgNIh2q5ItJlWt1d0pevAIMz
-yRSgDQTCsgtb4NGYkIAvKabR4ck2btowwvncLTYMzMMgotPpRFykSrqMTaLT
-CaRVhwodd2wI54SPpXQ3nHQtp45frD1nldQlm0adpW3b53MgAE//7/n/v1Ja
-hYCwMyHLAYMtkajYGzqUkX7HuFgRjDW1dCkmd5RhxS/7Ya1VNrgJYWNyUW44
-zpyvK2Pbri92QuISQbknCFcE5a7gcPxPX31/E8DHx8eGdnFxN33a9OGbJFgM
-AeYhwN3tVU75MCmuJqV7kGNpRqoINRz31wpdRo8XSDZndF1SXEjIuqS4E46q
-RMPxmzQ2fBPODyedBQfXFBGZ5NnvXQUuBAwwwF4nnPVpnZqmaRq2sX1Yxvqq
-lB0tzwdLsIE4LC2joiKzLIsODg8PDc6cT0LWAwU7gbTil7Xro9LdhMXG2FyS
-jAqkdFEkncxopYLquFt+V+nuFDM59iUUAGFH2SLW6iYlbXsIWvjQBPy7fRfP
-EgHQbY3CYLBhE0S3wDTmMhTBHt04JmwsUiQPilw6RUjPTO0BZaZGNQ==
+KLUv/QRYjRMAlueJQiDpqAMYCZHCAYIAAk48TB/kuJpmrY/GMDbpjerpT+px
++chEJ1DiLmLLe//jGlCeRl0kjlJKmaSUGfNiWAGAlz82AXcAeAB7ALWm0im0
+1sqOnAsylLySM2vRN8dVfB/XdtanL+X/7BjhSSuXXHDH6jNuD1/0LUK6JVT+
+iJDua4QmgQO/YHIJlbva/5eVSpqAokWyH0bfaNSJuE4ByMKhAVJZO4sMkOhr
+rw4jnNt/xEfRgRYweDweBgnYCa74GjyemMHOxTnRSGKzdmotfBk/tqDuzimv
+YLMP0l3BZi0dWgpn1tus0eE24bQxYRWPzELVXCm4PTqEc8LtJZVlTBimhXuL
+1ue0sr5s1gl/vO8LhQwE6PmU+qSUUlWq9mHh3pDuBAg3NULrd/hQxkqdZnVL
+M5cFg1lQ8ilCdrNSevyAQh2Cb4Tx8SogIESfT0QGhoaGRYu+TaRbwcE1QdWa
+Sut2q/If5eXSyDKqhsaRyq8RXHOqubxwu0vqVv7/w83OjYm5Dg0cyEpuhWSQ
+lazSmTWldbP0twlgY2PjwpPg2r3S6pVCyiq53YEORKDd/a2cks7AZjGWDKJv
+FRls4rofGxIaSwumceEYWM2kwu1ftxhltdPjdXdQNya7rhTclvoGJ4T/UbBK
+rqlBDpHljtGpjZLW1wBlgCY4r+vp893n20hhdUNK+UFspuqoNYVTeqVR0unb
+xhWQEDBgot9OOC2tdnqe53ndxRdqGQMZAI46GqJ4C3SHJdtizto3bCtbZFld
+qqRtBEELCZqA5G6fwLNEAHRbozAYbNgE0S0wjbkMRbBHN44JG4sUyYMil04R
+0jNTe4sfHlg=
 ====
