--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,15 +1,17 @@
 begin-base64 600 -
-KLUv/QRYXREAxmF7QRDLqA0idyMAAACgIfAnRwr80S+O7zj626sP70imV8PM
-iWNQzXHXRlUv1YAJGANoErcBHInsXlrZhW9VCAAAtxtubQBoAGgAGJ8EHYxk
-8qpPr1a0igOtQfM+I54VXy3aLWPjQBne1l18MFI034GyX2BCr1Jijc5rUzTs
-0fcmMmHMx1uYeTlHXWKCAEomrCFpn3VqOLsSVwAgi88Fgw2Hw9lI1NTs04bt
-gcDSK5R2uV4h8DEOJ9dq9s4Z5bTugPp2B/tYfDAGuFI69ED71KSN0Waobztn
-XQT+KhVugH9BREuQebFk2CSX7NFeKmec+FThRafsXHWHDwKQV8ATAXySk+9g
-LZcccpJbODbMBJ0yZa+VanPKTHLVHWKsuDgQIYnG+9XsrJVOO0Mi4YZR2MFG
-wE/h+I7WKyQSusWTSi3LQAs2T8Fo5VFWW9ShP1ge5MukGR3D2i6xnFhmsd6v
-9F/pvQ7CU+F1G+d1G+fxOgiv2yY6mNdtE163ObVSsxrFtGJwySKT7AGbBtNR
-VCoUNI0qdBzrnBbfel2oZ41klZNnffyMK/RLa521YmypP4Cr9yDtVst+8Gjt
-zSKuWBqwcK46aSSfVh40ZVRJl5iyqpRLTNnvpRqeUtZbX1oPwvIboA7xyB0K
-iggBEQEkKEBGARUA9bz02T2IGYINVSZAhNFGXlwwXKXyd78xpc8GqSeuMgbs
-rnXCg7CSNg4xBlJUs9XDpCDEVWLJMIQzjEqSPg==
+KLUv/QRYrRMAFqeLQhDJOgdEiv////93/Ghd7j2xorvdmKx3bHd8XwypdsSb
+BsfcmQMulgvQjUcCNNIiO98EgltKkb1TzIO0QgQAakSgAX0AewB6ACyU9lq9
+7592NKzOwHESFAcqOgk0GNMqu8j9gu2Wg31hy/4c/orvx1nQAgw9FiMoUnQq
+WLb8KTFVVk6vlOLP+2tPKpglMq9mJ0soj7TcPPT8AYKAana6mLZ//Q93l+IK
+wDPRoWCwkMlkFh5cXMzUi8nRiO2XatdqN1CZMZlMEqMIhqMIhpxRbBhFEEKD
+GUUQYhRB9yz97Odhr05I0aSV9ms/e/85+tYZVKSpwXQmOhUDaqwNytj+H7Uc
+ZzsVaXponVTmF+vEKLME0e6Y3VAomKYU7Zy9Hn3ucSpCJqW0h9UZOgg8YwHO
+RplDSLIGQ0vRICRaxmGuPNgBuGJqYMLD6qaRTsFyidKq0xZBaddJi6C03+t9
++Cmtt6rQ8gdKxig3iIfWREQ4CHAI8BDxUTpDLrLfz36t3tsHic6X0qnBjMp8
+wpE/tBtIdLrF79Gv6zwLwFFBCZZLXibps0Mo+YPUppbNEjOdYvqYdly95CmT
+pzyKDZwLYfWNDLZlsD2rbZVod2icGCY6Y0Vv/LPY2n+K78iGZn1MF2m6R22l
+GHNfvnLLpjWYUC2fmOwRTKdW2Wn3X+3oN3gvcbUgbJvrdMzVf4tvvTVVjo10
+iyTHQrmldvr1av1aMbaeb8pX9jCZNJm5cc7a23EBGAAvdgudLs99q7x6Bvrs
+xsQMwYYqEyDCaCMvLhiuUvm735jSZ4PUE1cZA3bXOuFBWEkbhxgDKarZ6mFS
+EOIqsWQYwhkLOzMU
 ====
