--- a/mgutab.d/50-doujin-oneshot-and-serial.2
+++ b/mgutab.d/50-doujin-oneshot-and-serial.2
@@ -1,13 +1,15 @@
 begin-base64 600 -
-KLUv/QRYxQ0AptpgPUCJqgNE7lhFURyQZrf/b4zY7h7b6q9pGEVVH6tYEbS7
-AVsp53YLChTwsv0JGWcmpZKVUoqFES+wRfE9TQ5RAFAATwCf7FtCOmmEUUop
-Y52TXo+ZKVuC4eBFpu/QfMfJHSdHrA2HQ6TXIHiiDG/ihNsnpbBC73UAF4cI
-SwZyXRekoUGlWkX4WFGyUiZ5MsfhBhZvXVfat4zyer11VjBvScQBDHbBHiid
-7bnQb9m32T5ibbbvsq8AfR6d3PRWZuVeCAlANEZbg8JPBlgeAkzaRiurjdcr
-hEOJyxbDxukzbQ/qcGOzA99oe1GHS9t7UHhyyRgQ0HLOaqmkUtKWaGQfsTgK
-3mTB4ziMwOIb3ur1Tq8wtjaRPZxMkX2f1HfRYRSXNx2v3d3hhdFW2xgJjMRG
-80bbjwIQzHujw5OQehDJo1T45AVavlBhDo7v6LXCKC2sWipjhL6d1nirtdc9
-UPh0wpYCl6aVGj3SWCXFCU8IvabDmgurBBW5Yb3XTuvQMxjkjwcBEgBEbTBl
-LEFtbrqBkTuGRmYTlSJ5ThViUQTDVnmVkqXTBn5FFkUYg5SxAHUgZHUc3BlY
-E7eK
+KLUv/QRYzRAARmF2PyCpuA0kKRQAGABAAJ89rvpMRNCrBuPf5+HTCCaRHPdT
+ev0dy0d2fDWRrNQBSFMQzFKyu72yG3eK03aAAMsPi2YAYgBiABfLbO9DA0m3
+KwAgXIiifcnTflEnYe8zVlpllHPOKS+lNVspQadnODQ+BOVPPu+BtgfamGrr
+tGnkM9EX0vFRcNotrTVaNWcboNMAwZGwXC4XCwMDCgVCUAE3GMkeGe2u0xYZ
+X10uAZnaG6VnFHsE2hdYSDqFG55O6fYW+txaa2OOEl/snghPxJZ9ItqLZO9T
+zmxvvtS6rGcgEHiuzuWwCWnfmV7Dwk17TLVp72GPUQpToe01W9TKOcYCD35V
+/zB5DQGOgwCNY4ln0t4b5cTxZqfNYXq39cp8Mc42laI5TnMMdLxaV1pZ5Z0X
+nKZg+o+nPxdABhjb480ZU2yj7ajYKg9CEe1DPE2i/ShFazoSBwb4pPTiOuuc
+1TMf2GMqUINHsfB1nV6Q8R7ztTeWyzqFKNy09zhpEw0MWfzmhW7Fm2212bI8
+UzGxMhK9FtqfiRVM5aHxHBag45sxtS4loTSmAk6Y+FIeYSrB7kRfUhB2nCZ9
+fASTD8PTW/a5hW/M1q0Y5OSTcPrSyLepQNoOsr2B0iUl7wEWAK0qi15UOy2u
+45QhoradMpagNjfdwMgdQyOziUqRPKcKsSiCYau8SsnSaQO/IosijEHKWIA6
+ELI6Du4Mhyo4vg==
 ====
