--- a/mgutab.d/51-oc-illust.2
+++ b/mgutab.d/51-oc-illust.2
@@ -1,17 +1,18 @@
 begin-base64 600 -
-KLUv/QRYBRQApuiOQCBtpgNEpr8ggCBDiMhOP2+3yWenf5xlgl87aoYl24pa
-Nk+d453AfRFvFX2NOonJKMZjS7mllFKj9AMTQgTnECCCAHwAfQBeITFyywOL
-BgwmkVenMRxmssymEI4i6xNYOiBjR8qnNsHRd1Qus7VTo9devMkPy0NQ3xp9
-R+ceUs6JjaVw1JS0CPMyD3d1DpZwyWU858x1uw6spGw29mZjTyIGBhDYZP7V
-aa+EPolacrdmrubJ1QCWiguLCBMSiWSCggIG+gSWiEQSpu1t2N9IgxleZlzp
-zFvGFypHfA8SPejzsIJ3Mp7DeY1wlDbjequtFITpM0x/AcM/wO9ARgxx7JDp
-mEl/Lpca3Syud2aKpcGFRYHKh+WeuCeRMBxX3os8DnJ8yOlDE7SkW9bwxFm7
-kvLF/gNjVnltOqS8ohG3RtwVjbg/V57PQd2nxJFCOLo6/8C8hueakuaQjSAt
-l1PjuKzZDV8gbdDjEVHIRSEHPT6JtEYv2rwFb3ayMOPARg8N/WG5DLZD2Cjx
-vbXezWpehf3B9BJPjLOlG7ehSG+aoFukl3ard+Y8c5aUjBA683ERmZepvILq
-nvXpDQ0fOm0Bk0iIEw6y/ABpj+MxKi3prbNqFVfZS8deW+XhIaQt892y1XLm
-rgIJFZcFYEevMGw5a51cpbduFwgXERBcJAC7YY3jcqYbnfLAhxH6c3nH0x1S
-LjlbL7UUc1uMxHswvdQsxtTSSvGUKNheeTN5t2zvnXRWDqF3VlpT0pnMLBcA
-lcuUurKS2npqLAHbgRIEEM0w9xAH9CGWBNw2WSgnWYrtY8DKb3uHwsmLb00M
-IZ1qyDhmtBkKPWKSGFwRuDBTUEyAeLs=
+KLUv/QRY9RQApqqVQCBtpgNEpr8ggCBDiMhOP2+3yWcPiXVUdJ0dP3Qt2VbU
+sN/OsU7gvoi3yguBTWASCrhuKaWUUmqUfuBVAoT5ChOJAIQAggDgrmzA7bm8
+QqLkFggVDhpMtFdHZzrMZJpd4QtB1iuwfETCD5XLTZpK/1l5zLXKbdpq8Y0h
+lo9sfKv0Hx33oHJPLER94QalSZmXgbir46YSHrmMpZSZXvugRgonY3My9kQz
+MIAAR/Ovju5KaA1QR87SzNEsORrAksCiQsKERCKZoKCAiV6BRZNIAhudZ3k6
+Y8OPNLaAiRYitTsO2ytpk4aPGdMp8834MuMI70WkF3n+WfDPxXs8j/GFsWZM
+La10gkj9ReoxYDzE9B2REAOGHzIdS2nP5XGbt2JqZaZYHFhUFKiEWN6Be6J9
+X+jRPQnkJo4f0fgRBR3nzRuWOG82UrzYh2BmlRenQ+WVDbg3AbNob67Wyilp
+h88/HnqD0hrNDOS5qPMqMKzwha6Oh2Qeo/MNSnPIQpGWR7lxXN7qxRhO2wRy
+jTRy0shNIJ9ordKTOH+hm2lcmHlgIQiGDrFcBtsfLIzYWkrtrVtnYX9IfcQS
+41zn5e7G6VMUdOv0sV5qZc4y50i5CKE1IRehednKKwETD26kZFZ65LQn2qdD
+r07fAjcGM4t1cnTafLkbItIdx2dWOk5LJd0oprKXjr32CsRHTjtme3Pdcubs
+ggkJLgxMH+2RYUdJqeTotPReIlhIQHCJAOrFG8flPO+U8cCHEdpz+afTHSqP
+XKV21om5GyPxHlIft4rxrJNOLOMGbHt0ARgAg+5QuQysKyCp/aYGELBtKUEA
+0QxzD3FAH2JJwG2ThXKSpdg+Bqz8tnconLz41sQQ0qmGjGNGm6HQIyaJwRWB
+CzMFBQ2I3gM=
 ====
