--- a/mgutab.d/50-oc-oneshot.2
+++ b/mgutab.d/50-oc-oneshot.2
@@ -1,9 +1,10 @@
 begin-base64 600 -
-KLUv/QRYzQgANBAjIyBvY+efreevh0lJCiMjIwp3ZWlibzozNjI3MTAwNDAx
+KLUv/QRYpQkAtBEjIyBvY+efreevh0lJCiMjIwp3ZWlibzozNjI3MTAwNDAx
 CeeOm+WTiOWwj+iPsgk0bTIzMTE0OTM3ODMJRXjphaXmnaEJNjU1MzgzOTY4
 MDEJ5rK+6Iqx5oO56I2J5pyoCTZtCSPllJDlsKc1ODYxNzA4MDU4CeWFieaA
 qumZhueriyAo5L2g55qE6Zi/5pel5ZOlL3Jpcmlvb29iKQkxeTc3OTIwNjY2
 MjMJ54On54Sm6buE5rK56JKc6aaZ5oqr6JCoICjloanovpvngrjolq/mnaEv
-6YaLKTc3ODk5OTI0MDMJ55O26KOF5Y+M5a2QXyAo5Y6f5pyIbHVuYSkJNm0K
-BgA1s9V6RqnE5103EBIocoVkag80aONV
+6YaLKTc3ODk5OTI0MDMJ55O26KOF5Y+M5a2QXyAo5Y6f5pyIbHVuYTE4NTIx
+ODQ1NTMJLeiViOiPjOmbnOa5ry0JNm0KBwCUap6a2Wo9o1Ti864bCAkUuUIy
+tQfvyOzX
 ====
