--- a/mgutab.d/51-oc-illust.2
+++ b/mgutab.d/51-oc-illust.2
@@ -1,18 +1,23 @@
 begin-base64 600 -
-KLUv/QRY9RQApqqVQCBtpgNEpr8ggCBDiMhOP2+3yWcPiXVUdJ0dP3Qt2VbU
-sN/OsU7gvoi3yguBTWASCrhuKaWUUmqUfuBVAoT5ChOJAIQAggDgrmzA7bm8
-QqLkFggVDhpMtFdHZzrMZJpd4QtB1iuwfETCD5XLTZpK/1l5zLXKbdpq8Y0h
-lo9sfKv0Hx33oHJPLER94QalSZmXgbir46YSHrmMpZSZXvugRgonY3My9kQz
-MIAAR/Ovju5KaA1QR87SzNEsORrAksCiQsKERCKZoKCAiV6BRZNIAhudZ3k6
-Y8OPNLaAiRYitTsO2ytpk4aPGdMp8834MuMI70WkF3n+WfDPxXs8j/GFsWZM
-La10gkj9ReoxYDzE9B2REAOGHzIdS2nP5XGbt2JqZaZYHFhUFKiEWN6Be6J9
-X+jRPQnkJo4f0fgRBR3nzRuWOG82UrzYh2BmlRenQ+WVDbg3AbNob67Wyilp
-h88/HnqD0hrNDOS5qPMqMKzwha6Oh2Qeo/MNSnPIQpGWR7lxXN7qxRhO2wRy
-jTRy0shNIJ9ordKTOH+hm2lcmHlgIQiGDrFcBtsfLIzYWkrtrVtnYX9IfcQS
-41zn5e7G6VMUdOv0sV5qZc4y50i5CKE1IRehednKKwETD26kZFZ65LQn2qdD
-r07fAjcGM4t1cnTafLkbItIdx2dWOk5LJd0oprKXjr32CsRHTjtme3Pdcubs
-ggkJLgxMH+2RYUdJqeTotPReIlhIQHCJAOrFG8flPO+U8cCHEdpz+afTHSqP
-XKV21om5GyPxHlIft4rxrJNOLOMGbHt0ARgAg+5QuQysKyCp/aYGELBtKUEA
-0QxzD3FAH2JJwG2ThXKSpdg+Bqz8tnconLz41sQQ0qmGjGNGm6HQIyaJwRWB
-CzMFBQ2I3gM=
+IyMgb2PmkbhJSQojIyMKd2VpYm86MzkxODM5ODM1OQnnu53nvo7niLHmg4VQ
+T1QgKOmUhemUhSkJNG0Kd2VpYm86NTYzODExMTc4OQnlvpfliLDlrr3mgZXn
+moTkuprkvIrlpKrliKnmlq/mn7/lrZAJNm0Kd2VpYm86NzU0NTIwMTQ0OAnl
+pYvmlpcxMDHlpKnkuYtvY+atu+S6humDveimgeeIsSAoaGtlbm/llrUv5bCP
+6buEL+m7hOm7hC/lpKfpu4Qv6buE6YWxL+iAtua8jykJNW0Kd2VpYm86NzA4
+NzE3MDg2MgnngpLmnb/moJfljZXmjqjkurogKOm7juWtkC9SZWlrbykJNm0K
+d2VpYm86NzgxNTM3NDYyMAnlsI/nnLznvanku4DkuYjml7blgJnmnInmnKwJ
+Nm0Kd2VpYm86NzIzNDM1Mzc4NAnkuozmiormiYvlh7rlj5HmlZHmj7QJMnkK
+d2VpYm86Nzc4NjgxMjM3OAnmnpfnlo/po47pnLIgKEDpnZLmoZTnj63miJ8v
+5aW95oOz5ZCD57KJ5aW95oOz5ZCD57KJKQk4bQp3ZWlibzo3ODE4ODE1MzY0
+CeaYr+eCnOaYnwk2bQp3ZWlibzo2OTYyNDg3NzE3Ceacq+mHjgk2bQp3ZWli
+bzo2MDQ2NTMzNTU3CeS4uum4veWtkOS4uum4veWtkOeMruS4iuiTneiOk+aF
+leaWryAo5Y2X5ZKV5ZKVIOWNl+mYmSkJNm0Kd2VpYm86Nzc2NDA4OTkwMQnl
+r7nkvaDnmoTljozmgbbliLDkuobku6TmiJHlj43og4PnmoTnqIvluqYJNm0K
+d2VpYm86MzEyMTU1NDg2NQnojqjpuJ8JMW0Kd2VpYm86NzIzMjQyNzc0MAnm
+nKrmtbzlrZAJNm0Kd2VpYm86Njk3MjQyNTM0OQnpuL3lrZDlpKfnjovlsI/n
+tKtfCTEybQp3ZWlibzo2Mjg4OTkwNzY0Lgl5YXdpdHkJNm0Kd2VpYm86NjM1
+MjM5MTMzMQnpm6jni5fpm6jni5dmeWJ4ZAk2bQp3ZWlibzo1OTg4MDQ4NjU4
+CemYv+WupeWupeWupeWupemxvOexvQk4bQp3ZWlibzo3MzczMDMxMzUyCeel
+geagjueRtgk4bQp3ZWlibzo2OTY4NTIzOTI0CeiAgOm7r+aYpeeniyAo6Zi/
+56WBKQk2bQo=
 ====
