--- a/mgutab.d/70-game-official.1
+++ b/mgutab.d/70-game-official.1
@@ -1,8 +1,9 @@
 begin-base64 600 -
-KLUv/QRY9QcAws87M2BrdUQmDoJgyVex1GmjJ4qmCprqfyxe//hGtBLdeilE
-eOqWBwAARJ/SKP0JjCJtVGEPVlB2q4UGKpJbo/iGNbmBXrp3yDuX2ww9g2I/
-bFIL9/ViGaSKCc6dGjx4hI4mN9/Z3GKi35ZOnBrMOmNdkl4n6lLWikgkEJRV
-9VGK2ww90/COiON5zSdV8Hi91gLcy2JXdmtmRL1TV3zc9Hi12FVZlaUMpvrA
-+L3uv26PFCcXNgZjV7jPEwcjUonQc7m/CqpNfLz4r6MdkQbh3qk1WeNLWiuL
-mq7JQqwrQhAwIFAASZIEnZhn4HjIPcYfSVIDAFVVJEKUDJIqQhTqbX3C
+IyMg5ri45oiP5a6Y5pa5CiMjIwp3ZWlibzo3NjM1MTcxMjY0CemTuOS7meS5
+i+WigyAo5LqM5qyh5YWD6JCM57O75Y+k6aOO5YW75oiQ562W55Wl5Y2h54mM
+5omL5ri4KQkxeQp3ZWlibzo3NjI1NDY0Nzk1CeW9t+W+qOS5i+ihlwk4bQp3
+ZWlibzo3Nzk1NzgwNTU4CeW9kum+mea9riAo5pqX5Y+3556zKQk0bQoKcXE6
+NjUyODIxCeWls+S4u+S7juS5pumHjOi3keWHuuadpeS6huaAjuS5iOWKngkz
+bQpxcTo2NTI4OTgJ5oiR6Z2g56ew5Y+357O757uf5omT6LSl5LiH5Y2D56We
+6LGqCThtCg==
 ====
