--- a/mgutab.d/25-oc-oneshot.1
+++ b/mgutab.d/25-oc-oneshot.1
@@ -1,16 +1,17 @@
 begin-base64 600 -
-KLUv/QRYJRMAtmaIQADJahskJaP///9/BMiNpkDZPKxq593qa/UsPIfP80Mp
-Xvu8KPAD2i0ZzjcQEieM2RvPSq/s7n4oUqr+/1+Jy0N6AHcAcwC8xCsgQr0J
-hKOoRIsQLmel+m7abvSz0VmskOPTvZP3nLzEdW97sZ4ZS4YPV4FDGlUgXIOr
-oGEtUm+ReseEMASG3kh8daPE+eqN4kyrxJUgFJfwgJtGPqXi0t6td80Y54YN
-hCaCYiHLsgUBLpcI8hIBeFA66uuZDZZlAbU2VGQgMplJsVmQ0TBS51UsOMkH
-Z3k+BIYUTsSHEzh+ppdTU73duy9OpV7DVCucF0+lXrUiscWa7myxzZKBA6F3
-GlzDNA8RBwjo6RBAVm2x3XnvLRmykwgPQRFFpG+tPtMwrxWKPl308RYYeiUu
-7843a5tt1V8XCAwk0ExsHuSc1NZ5s8UocNRAbC6yarrttPayWOGGZ3R5/VUa
-5bZY64zztnnd6PJ6afSl0ctrN0znzLrOOV+p90h5E9FLOvGt1VK6Vey9T6uQ
-KxEvRMaLjg4qdVCIqLJ6i2nkOaEHsUKL3OqmdNPN6plvDgsSW2KkRBOM75DG
-lNXLud2695atzb6Of1ahy+M5QJ9hDvSiYRMMFDjQy0ZSXaumdsMVBYZeKww5
-4CkNRIzLeHD0GjYAg8FgMBdw9LLimjfW9WZLhxO5jEd9nQPiFml3nnfmTGuH
-E0GQn0T4141dBv9AEUki9IoXAGYY83RGmBIasdGrWuHunzV7ZEEQRJEoFKUW
-CoB1+dQKw9vuFYxWfELEKn25adAakICrwcIYHrWxsyIaSab22qYitQ==
+KLUv/QRYhRMAxqeKPiDJ6pkpXQkACcJ0noQ9xON5Ix68ZqEHllrV+xGq9A48
+KsDmemvIxPZBg9NIQuGJKiIiIiLezK7fvwDoPkwDfAB5AHgAVHenXsIVGKk4
+CqSvWN8ipEdJp7ZZ1zxBG97lAjlAnjvhnxMeL9272qslvpEBxKnQKYUskK7B
+qbBlr5J/lXzHBFD0gRzpx05hvNjqPC+eVMLGkKqrPOioEe6xeqx2603xvbhh
+A6GJoFjQNG1BAAz2QWIfwGflVZ3PbDJNCzNXLbHFlDZUZCAyGUmxWZDZspKH
+p1h0ko/u+nDRB1I4+Q+pL+xQPEo9dbZ22+t5fMtYK51Y9zzOWom3Xj03rrfi
+yNCJ4E8afcs0DxEHCGjpECBSXW/deO8dGbSUSA9Z/VGJv1pc2zLuBY5AftT1
+1wdyph7txhbrimun8JTRP1afRIKvQGAggWZi8xClnJVKi+tVfaEGYnOJVM9d
+Za3W5QI3PiGM8zFTGHe9WuOLc+ZOIYzzJhI3kXi0Nd8pJdZUShnzuAcKNxnx
+OOW1lNY5c8XeO9UCOSX/QiS86PAhkw+F/JQWt6BGeEfEQy7QEjPdc+4LEjd6
+EL5K1yOVdeY5t6UY3jfB4J5SiNLiUWZL9864Vq07dVALhHlwjhDXMod52bIJ
+Bgoc5mUTp6ZUz5ovVX0g9wJFDjpKg59xMvhH4ls2AIPBYDCXj8QjvRTvq6nF
+Fg/nczK4qvOdULfEurG0EuNJPZz/fT0l0rsYAMd3NzOMeTojTAmN2OhVrXD3
+z5o9siAIokgUilILBcC6fGqF4W33CkYrPiFilb7cNGgNSMDVYGEMj9rYWRGN
+JFN7Bz4Z0Q==
 ====
