--- a/mgutab.d/21-orig-noncomm-oneshot.2
+++ b/mgutab.d/21-orig-noncomm-oneshot.2
@@ -1,5 +1,6 @@
 begin-base64 600 -
-KLUv/QRYDQMAdAUjIyDljp/liJvpnZ7llYbnn63nr4dJSQojCndlaWJvOjE3
+KLUv/QRYTQQAxAcjIyDljp/liJvpnZ7llYbnn63nr4dJSQojCndlaWJvOjE3
 MzE3MDUwMjUJS0FUQUtPVS3mlrnlhbQJOG03NTc0MTA2NjkyCeaksOWtkHlh
-c2hpbgk2bQoCADMqeyFgDK2dLMA=
+c2hpbgk2NTc5NTI3OTQ3MQnnnJ/orqnosZrmkbjkuI3nnYDpppbpobsJOG0K
+AwARRcaMykgIwANxFbyD
 ====
