--- a/mgutab.d/70-game-official.1
+++ b/mgutab.d/70-game-official.1
@@ -1,9 +1,10 @@
 begin-base64 600 -
-IyMg5ri45oiP5a6Y5pa5CiMjIwp3ZWlibzo3NjM1MTcxMjY0CemTuOS7meS5
-i+WigyAo5LqM5qyh5YWD6JCM57O75Y+k6aOO5YW75oiQ562W55Wl5Y2h54mM
-5omL5ri4KQkxeQp3ZWlibzo3NjI1NDY0Nzk1CeW9t+W+qOS5i+ihlwk4bQp3
-ZWlibzo3Nzk1NzgwNTU4CeW9kum+mea9riAo5pqX5Y+3556zKQk0bQoKcXE6
-NjUyODIxCeWls+S4u+S7juS5pumHjOi3keWHuuadpeS6huaAjuS5iOWKngkz
-bQpxcTo2NTI4OTgJ5oiR6Z2g56ew5Y+357O757uf5omT6LSl5LiH5Y2D56We
-6LGqCThtCg==
+KLUv/QRY1QkANlNJOFCFWAdEpjAzM80zyy0SERMI9bboNLiAqWJvmxnRfyKW
++BoS8Lelh4iZmQ0IiaQULc/ydFM1qj41OwA5ADoA2ZcW11CkFZyX4N42aMXi
+HoDfSO1oVCYcM2pQqcVOWq2rstjeyIUnBgMFBAcTRVHT6HmHkXPZi+I3KCqg
+aIecfx7e0RiZDzpTjuk13wvJ+EowluvHQzGjxjg9NL1eCbYu61YItj5E8THa
+b9r2Mv41bE+AvQkfUe4S3CHnpIstEUq77GuWYJEqWvBs1JqEVyD1F3ry4l2I
+bpfUYtSaUpeiBj+vtsrVvSYUyjRhVn0EE2ZtPRneLKECVYncGc3BzzuSV2xv
+Bbn4srZyMvdG6AnhHanrZW/GNkMiGQJQ0bcrGb+I+huAdrQFABXd4xJjSFUV
+iRAlg6SKEAVuLvw6
 ====
