--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,21 +1,22 @@
 begin-base64 600 -
-KLUv/QRYtRkA1vS2QQDLTAdbCpb+//+3AoQ/SVKMj+K04DcASC1/j9qxGOzv
-B3H7exOLTIe71Y7+Jg/BWrA4W0op5U5Ci8Pn//8941cIqgCoAJ0AuB6LBhF1
-0y7tpfPl4xVKNq20d6o/cBJogAxEeJRyiStvMrmbpuDStg/RpcJ+qbTXSsH/
-+c1O9QcpLzIQeDgKNhlUK8tCe0bbsQgbAkz2l/grvqC0YYOwo9EAFH4yOJ4X
-TAaBiRlcRq9zYpD+tSsbxFMot3DjCymn7HreoU5RUYCFG3mo7V8fxN+duALQ
-wOBkOHDQaDQOFDyeuIoRIzpqe8baOl1PVMoZjSYseaO0KYTojYXFxICJABQW
-IqexBEL2C9qvlb590cgYcxo3GZJSXvnIILmeaGR0i59O8Ps0GISgBSdahs1E
-E8gmsWSRkEbt9ktN9Inn4/nJekOpHEpl0Eci4gL0CTugT9iJAH0kQJ+wYpMB
-fcIK0Cd0aidoQYppbblpU0v7taC9/3K+9QdWSNxkOBgcDwHda4s4tj84rZT2
-Y4VE71g3lfLsNW6U8oWRPQojrKX91jv/qbQVwkbbNtrG6TZrZI86xg0VzeGi
-IRy02Nr/iW+Kh36BiLKQ6HTaOjGWX5rlGIzeZEi6vKKySWh61co+vwfrN//B
-O0wWs7BhZKNjWf8tvvXqWLlGomOuXCPlnW70S2v9WjG21CFKsxyCEnM2EcKl
-tfeTuOJ5AMM71VEkekXLJZVmpfaJSstS+kSl/V4K4p+z3pohl0UCDp3r9S84
-FRMCnNpL7cTffFiu13GiUXCao0V7pbWCFLQWh2GMoUSTmjap6dpJj3A9B6fF
-oP1Ka4YnZODhrLhyypXdfrU+KO1n4xgjmIymUc7Rsksq5XyLv2pURmJoNmo2
-mZdd72OUebueSNeTyXaMbrfYtgSV/tiwHeN7acX07Y0lklx5kwlJGSeUbJZU
-nlCyaSbbI6VRbhq12zTRvoBh3PFyjIUfAJLXbik1DsDslqhp0DQDNWoZqKf7
-vdgtdLo8963y6hnosxsTMwQbqkyACKONvLhguErl735jSp8NUk9cZQzYXeuE
-B2ElbRxiDKSoZquHSUGIq8SSYQhnDwI7AA==
+KLUv/QRYfRoAlra8QgDrqgNbSpX0//+/sHLfGF44EuZPZC6WbzgrMMSKkrj4
+3BB3vJsLvt/wxcUyuJ5n9hM4nC2lTHJLmcJB6f//lXOLB7EArACmABtgvjCy
+S7QQRoOYitEu7a2TSopNUPLJRDvo/eGjIOM7EOEB5hJX9nBqMZqCS88+xJkK
+e4Wl/b92lE5ugt4fpLTASBD6LPBwUin5Ndqw2H7R2BFqslOJ6ePbSes58EAZ
+Dj5PhPEJrdRkEBYxw8zoPyfuKr3WZYOIGuUU2khjyiq30EHVJygMtGijTWo7
+fdph7k78ADIuPhgPHDqdjsOEjY1ociNGdMg2rLVttpAEZk6nE7d2mM759zPU
+sghM3gA3hRDtqaiQICAhYKJCBDWWRMh+O0v/K7WUNDLeoEYPhwTMLh8ZpBaS
+Rka3mNbZcVxGA+9jgIplFph4AtkmmCwy0qnbppGJPvGkeHLy72iVR6v8iQJE
+WHwiD/SJPFDEJwrwiTwKD+cTeRSfyPNqZ2e7iuvLxOhTivZrO3splZNaf2iN
+RA/nc/EJFbCtbBLHdtpNK6XlWiPRQdZPYIatjAHbY6VRYnTqtmOkfQHDeLPJ
+NxZGlhTt9++ktEr7ELPYnsU2zbZbI7vUMW60aI4ZDeGdxdZSOvFV8dArIOJr
+JHqd9ifGkoKw/FKjPRyTLbu0bJKYNknJPjnaPTcpBOosrxcLu+Y1OpZPqcX3
+r62VZST6xZVlpnyzjX7rP/3H2FaHAGE5JCXWZiKES2svJ/HjieDCQe8pEm0S
+yyBLt1b7hKVfK33C0n4DDiDroGuE0UKUardURg0Y0auc/x39v9efWnwoJAZ4
+tbfaiblJWWphx4lGoWkOGe1f/7vaWUvDML6kRJVMq2RahtIlWujdtLiz9Otj
+hLwGoY+LK69c2S33TztpuRnHqKEaT6Vci2WXVcpJLabfaSmJI9jY8XBobuFH
+KdvcQpItfL32jW3LzLYElv7YsB3je+vjSm1MSzS5socTojJOKNkwqzyhZMdU
+ASAgMAIiINDpAT7CJLtbCuMA2i3BNGjKQI3KQL33e7EtdBrPfba8moE+b0ws
+gg05k4kwOuTFabhK+bt/mNLbIDVxlQzYXTrhEVbS4hDjpOjZ6j3pIS6JJcOw
+zlbXPwA=
 ====
