--- a/mgutab.d/30-oc-illust.1
+++ b/mgutab.d/30-oc-illust.1
@@ -1,32 +1,33 @@
 begin-base64 600 -
-KLUv/QRYZSkAOlhgEkXgzqoNMI9I5BRmmGGGefzGtqmy4GdmozwT5QasNH8p
-N40jOzskVtYhlXL/6EWJMUTN82eCg53I3lzZ4wZFZnEMYwxP2eEOARcBFgEh
-j/HaG6+VVlaSRRJEGgo8xviYVmpP3L7cS4PsMq4FkuQ+jxZj+XT+ZHHlXWu/
-3D4PVH65fTI44Aruc6/eGaVXZU2x0qyOLXOFsxDa44xS1io9ESu7xEq7yGj3
-Jo61YnqfuqylQaRS6cIFCBde39pYrbUWthJ65GQbVDYxIq+cQP8oX9J5bay9
-5JMTWeaiX6rdIhG6pdFKjDHtcLNCp9oqN5+P3kOhCKVSyHG9b5/S/+pzypTM
-PmnRPm+s03v5o/cRVD5xbdAIKtNOIIxJ01z2iWv7xf9Pr6WWQoaPqAfIUMqQ
-QTQKiTZoVPh0pKVXVGFDY1TyeKOcsnr/BUoZIg0OADweD4ADt5SOUOp4PAEa
-twNHdIQfKptGy7JXdvpexfPGl6wS2mSWQSlIwBeLrs107BauYNrjX29OenEt
-ZXTQ8s6Vc7o8C6Ed2+jJKuVJl1lc+fWSc1JccttkCkE3LzvG0iAQVchCsVG3
-z2UlJDHJKZgtiwk/HQ2lDFlJXn3YIbrtc0aLJ7X3NWhsaDQIkUReY/0Y6+M5
-85JDTnZK7oN1CN3KSuO1k9oaPS+04IABjAb+uMqK7cWVRCKRSCILpQtOJ/Yw
-pXGCNC6IJpQyYACRIhAgMAKBCmxg0KChgo/eV6iMAiWbuEK3FEfsXfqvEpFr
-uu2ygaaVTTtpWytsoWmPkdqI6f8HsNnlWCx/OqEPlS0Tsj9UNgznc2uvh+17
-VQAHB4cF0oFenPN60VaO6AcwLiwwHNxQhCUt0OmM0l5Mrz3BfTJXaDLLIrHM
-Etv+9qm8Xp0vAsufDgicDyeVW1QblQN1NW1j07GWHfPSLiOd3k9Zn0SysMDA
-uLhgwMCndy/17LU1gMcDJMfkdgqmWWLb03m9QpnHBpVGogobn04KErC1C0lw
-Hwibxo3sEDUbttI+Z7z2SomfhZZTIuHtpmds2qm01MMRR7lgAIcowcYGh4Xf
-K+/fSL/STiDtBOK09qcDU6JXH/bMQ8NMOiSVa6tdw+UOJtBvxfRK7EUPsTwz
-Qn86A0KqDuHMQ06p0SI+tkuN1rlC9+x7eEr8NST36VRbp9o1Hhp1+2QvnRMD
-/V4rJY42fg1tx9y+kZeNLQBG1U8puQRkt6i2x0mOrWgbG4gSEqKEhE7rlfTl
-0w6TCpbY9hH1GJP+MKJJwIAouu2i0V6xfHzfvg2VLJQwQEDgnocnxvTSBxse
-iMzkFpb2+zN6LzG1NFr+wIEyJcKZDcTRwE+HlcoqNx9MbrNMhDC5LYLKKQ8a
-17H954wVRy8+dhtUBiERjnSALxPQZZXYq/W/xuw0CJazP51QS6ZjdtqfXvuS
-xlzuo5Dho/faTM/YtItGu2i0e5S+dx9buSOxdTggyQmdkxJ6Pp0PKTJKi/bH
-WHp4zjhrWKHpJrfUwE8HRBW+0DRut0+77R6m0sO1/k9foQFrNKDslUHgfLdZ
-pmFpv3RaKePnfGQU10Zx7QGOAzQgIAJCiHVmB61BAL3j/fbyl2FUw0DKEOVZ
-w/fkPSBHCoIcONFOQ1IT+eD5daIyVnNjcDO6cF9fsvcWWwj2La+hf4YTNDc5
-647dnSN5kwEawoicyZDsgNsucYs5ZN9sK5ss+6VKohEEHRI0Q3L3J/AoAvC2
-RjEY7E2QboGJuQwEe7pxzI1FkTxMLp2E9MzCHnzhnSs=
+KLUv/QRYHSoA2lmwEkXwrqoNLIpI5HTgGXgGpsOINrrnC2jOFlsKj3LL9wMR
+JKOTdUn6U2a/Fihz3IEqxfP8tOMF5O+ye3Nlj58GJk8z8PxcGGgVARsBGwEC
+NjY2MIwSgDzGa2+8VlrZSA5RCGUw8BjjY1qpTXH7ci/9scu4FiiS+zxajOXT
++VPFlXet3XL7OlC55fbB2IApuM+9emeUXpV1xUqzOLbMFc5GaI8zSlmr9Eik
+7BMrzQKj3Zs41orpfeqylv6MSKQMGSQc8PrWxmqttbCUsOMm06AyihI55QT6
+R/mSzmtjrSWXpMgyFv1S7ZaJ0C2NVmKM6YeaFjrVRqn5XPQOAk0gkUCO6337
+lP5Xn1OmYHbJivZ5Y53eyxe9h6ByiWt/QlCZdgJdSprGsktc2y/+f3ottRYw
+XEQ9wAbShg0hESjUIeOChyMtvaELGhkikscb5ZTV+y9AwghleADQ6XQAJLil
+9AQSp9MJ0cafoe2X2xfyorFp3A4swRF6oGwaLcte2el7Fc8bX7JOaJJZ/qwQ
+AV8qujbTsVu4gmmPf7056cWVhMFByztXzunybIR2bKMnq5QnXVZx5VdLvjlh
+ye1SKfzUtOwYS38+VCFLxUbdPpaUUIQkp1y27CX0cDiQMGQjeRVim3Tb54wW
+T2rvc8jQyHgAGoW8xvox1sczpiWbSvZJ7oN9CN3KSuO1k9oaPQ/UIAGCiwf+
+uMqK7cV1NBqNRiEMpAxOJ/YwpXF+MjKEKpA2aPiMJhAgIPp8Cmho4MDhgove
+V6iswiSTuEK3FEfsXfqvIpFruu2ygaWUTTtpWytcoWmPkdqI6f8HoNnlWCx7
+OCAPlA1j2h4oG2bzubXXw/a9Gn7ptFLGv/HIJq5t4toDHHtxzutFWzeiJ7g4
+YOACwk1FONICnc4o7cX02hLcJ3OFJLMMEssqse1vn8rr1fkgsOzhiLD5bFJ5
+RbVROVBX0zQ2HVvZLy/tMtLp/ZT1RyMDBi4uDhxw4MCndy/17LU1QKfjI7/k
+dgqmVWK7w3m9QlnH/pBEoQsaHs4KEbC1C0VwnwibxoXsETMbttI+Z7z2Solf
+hZZTIOHtpmNs2qm01MMRR9lgwEZogYbGhgG/V96/kX6lnUDaCbRpbQ/HZUSv
+QuxZh4aVtCmVa6tdw+UPJdBvxfRK7EUQsRxTQns4A0CqD+EMRD6Z0SQ8NsuM
+1rlC9+x7eEr81ZT7dKqtU+2ZDo26fbKXvomBfq+VEgcARNVNuW92InxpySS6
+rYIme7RVRnmjrKeTPPKxV1S7oyTHUjSNDTQxhSam0Gm9kr58ylFioRLbLqL+
+UtIhQrQJF9BEt10y2iuWj+/btyASBpIGCQrc8/DEmF4aoUMEkJi8wtJ+f0bv
+JaaWRsseOBDmRDizgTga6OGwUhml5nPJbRaK0CW3QVA5BULjOLb/nLHi6MXH
+ToPKHybCEA7wRQK6rBJ7tf7Xl53+wG62hwNqyfTLTvvTa1/SmMt9FjBc9F6b
+6Ribdslol4x2j9L37mMrdya2zgYUSaFvTsKOhxNiRTZZ0f4YSw/PGecMKyzV
+5JUa6OF8qMIWmsbt9mm33cNUerjW/+kpMmBNBpS9sgib7zbLMiwdNSAgAkII
+dWcH2ry/xQigd7zfXv4xjGoNpDpRnjV8T94DcqQgyIET7TIkNZEPnl8nKmM1
+NwYXowv39SV7b7GF4L7lGfpnOEFzkzPv2N05kjcZgCGMyJkMkR207RK3mEP2
+zbayybJcqqQ2giAgQQNI7voEHkQA2tZog8G2CcItMJvLiGAPNo55Y1GSB8il
+g5CeGd0DYxgZrw==
 ====
