--- a/mgutab.d/70-game-official.1
+++ b/mgutab.d/70-game-official.1
@@ -1,10 +1,11 @@
 begin-base64 600 -
-KLUv/QRY1QkANlNJOFCFWAdEpjAzM80zyy0SERMI9bboNLiAqWJvmxnRfyKW
-+BoS8Lelh4iZmQ0IiaQULc/ydFM1qj41OwA5ADoA2ZcW11CkFZyX4N42aMXi
-HoDfSO1oVCYcM2pQqcVOWq2rstjeyIUnBgMFBAcTRVHT6HmHkXPZi+I3KCqg
-aIecfx7e0RiZDzpTjuk13wvJ+EowluvHQzGjxjg9NL1eCbYu61YItj5E8THa
-b9r2Mv41bE+AvQkfUe4S3CHnpIstEUq77GuWYJEqWvBs1JqEVyD1F3ry4l2I
-bpfUYtSaUpeiBj+vtsrVvSYUyjRhVn0EE2ZtPRneLKECVYncGc3BzzuSV2xv
-Bbn4srZyMvdG6AnhHanrZW/GNkMiGQJQ0bcrGb+I+huAdrQFABXd4xJjSFUV
-iRAlg6SKEAVuLvw6
+KLUv/QRYJQsAJhZTO1BpqwNEpjAzMx3cIam/lSHNshS/sTUjrOI3Yga4oDU+
+I7EF647p4lSkK2ZmtuIWSSlZn7inX8xW0oEBRQBBAEQA1uYo3jHYExQ2BH7x
+wTEIJUbmorcvCDLy4NyEv0LtcCIPfALqiqizRDmlCaKW1miyDAQCDBBQoHme
+pwEnfsN4hj/nd54nohaz9jqfFLpQnRgaGpqmkubDs+wvc4qKdziY8SuZMmL0
+eWuFXFspW91JwZETUEfI+Df6rJSVJqlCBuh85PwT668chsw0cC3Uc6L1Wnoh
+kQQLpKXbEYpLsu4ukBLWX4hb9PaXuUbGdmBRavjnpapoWhQ4BjXm8AlC3Vl8
+KHHtIy9JeQE1Fk0F0fm42B7bPgPDK2yPL44vjqBia/gdzhVqh6wPVH7SG1VK
+WarSzIIfN0gA0Ea4KZZ7nWsaPi2tEKTaidIZgT0GADVlXEX3uMQYUlVFIkTJ
+IKkiRAGLWTjT
 ====
