--- a/mgutab.d/25-doujin-oneshot-and-serial.1
+++ b/mgutab.d/25-doujin-oneshot-and-serial.1
@@ -1,22 +1,25 @@
 begin-base64 600 -
-KLUv/QRYFRsA9rfAQgDrqA0ksvr///9X1mh/ANjG/guawQX64VrWpiFUlJT1
-IIz5J/yNYJ1rWGUTcBR4EbwE24nsTUurhyEAAPr/BfnrBbUArwCsAF52xYQd
-Xr5gsk+yz0YDmLrRHqulcsZ5WVwyCov20fuDaMFGhyACxMsprBz6zG40BZaO
-hYA5FXbMivZ/iueUmxy9P8RogaFAQ5QR+qRecqu0Xa9dw7Ej7GSf8c6/FsfK
-OeBGGw46joQh0ojZySIyYIac0F/Ki+m0lWYDiCrlF1moQ5Jhap+PqE9QHFjJ
-Qp7U9vkT383K+wA2LkQYDxxAIJDDBA8PyNIDRnzAtmu1abTP5OUPCBQruqXS
-LSvaraX4TinffoZZLrHJHd6mMKJDFRUSBCQETFSUoMKUCNktrvOfzjpNJmEP
-Kgx9TrxME5JFZp/JJPR6J5V42zYacB0D1CvLuEAUkU1ik0tKOlXbOjDQ5ZXz
-yi2+LalySZU7UoAIi47EjToSN4roSAE6EkcR+nQkjqIjcU6rxBXTSx/nRqO8
-aLcVVztnlLP6w6oEhj6iC5FGAVrMNnlsn1jWGOu2KoE+qo4SnxGYcELKtlHl
-CSn7pbJBVNrlRqdq+2XaFzCENZ7cYyGUedFu38o5aawPEXvt2GvLaHtlsk8f
-YceM9sjREI7rrXVOeS0MiI4RAVsl0KmsL++N03Plmh0d+pDQMs3MPnlplpfs
-cpv4NzkhTJdp1VjYO63Qb/w567VvaasMO9E1rAwjyTVa6Jb+z/97K3UIz5VH
-UuAsBkJ4rNVu8f6VCS589J460Syv7K3olWq3BA4jKR3CBZeR0WVwGAb8Thyf
-4n/rsUKX7EOp7BVMyGEDOo3yH89/a/2nhYhCYoDTammVd5NTZvZ9tGgXmfbA
-0f70H1NcqwxDWJMCVWBaBaZhKH2SfY5lvbjOp4+hwTXQENGwsoqVvW7/E8e6
-xTxCDpUQ5ZRnr+yRxihnvfNBMyew5ApBoY9O7Qs5ZZ7aZ6J9rdbuoW2c2Jaw
-okM2bL/XWvqXznqzAklYORQhIDACIjDQ5QGyZg8fuZLdIoXJAN4iyQhobrZG
-ZbbeNnnBZjsVz32kvJqBPm9MzAQbRiYQYfTkxW24yvm7P0zpbJA6cZUP2F06
-4RBW0uIQ46So2eo06SFuiSXDcM5E4OKy
+KLUv/QRY9R4AekCsDUPwzEwHWwoQh8VhcYpeA+ggxPioJwn4NcBysc05A3Sw
+o3Oi3zfYt1A3J9zdav6tAlaRx3CklDLJLTXa2pjmsDjxKQIP0ADIAMoAErGT
++OmENEIbCHYxGxWyfWJZv6+CsZPoo+orVa7FjCCqvCFlp3I9Gg9iq0b7Vy2V
+85sX5pJXMO2jd4mQA5JpAcWIKq/I8qejq9EXZBpHIn7AsGNe2v8pnlOCcvQu
+8X0ZoAYbIdGn03rJtNOu2fbsY1O4yT6/O/9a/NWwIxyROkxhCRTaiLnJJTJi
+hw+jv5QX02nrTAiRdcovuRHESYbh9XxE3eJCQSw34rS2z5/4glbeD0DSCIEm
+RHg8nggLHBwRliNSiNx2LbZ3ux5KlTseT7F8U9EzWb6dZN5udEv/5/+9lfqE
+qpZNWqIOJ074V6sFv/tXMtDw0XtLRcNsWfXSMddueWmaS7e8tFtL8Z1Svv0O
+uoxCk0FU+4KJ/mBgVBioGGCBgcIaVyhkt7jOfzrrRKWMOazx01FR5RmSXKLr
+oVJGr3dSiUGQxBGaIrBsWaYmrkr2CU1GOekWb4O4iS6vnFeC39uTK59c2VQS
+QJFhKoUjUykcUZhKAkyl8OLTMZXCC1MpdFolrphe+jY1evWi3VZc7ZyfnNUD
+9EEbIcdGaEaWXbLsFfyf+KsgLmT8YBlXqayzZf/o98lZ73yPhpR4qo2eTwcE
+r0eSyji8HmrXo9F2zm7b4HaFlyYJsf1ea+lfOmtNTDyR5U/HBGa0sLJpXNnC
+yrax7BGXdqnRLd62ofYGDiMPJ+dkGGVetNu3ck761Z/A2TbOtnO7HUvZKZER
+RIMO+aAnHNdb65zyWpgRHVMi0k6iU1lf3vtNVS3PbvSnc7LLMxq2ik3DXrJL
+cOIH5fSYLkObZdg3tNHv93PWa9/uAhGj6jgbrapllK7n1tavk4LXXr997JwY
+ceXSq5vsT+sELQbBeR3UAQofzGB6xGQ7gP/wrPUDJTiDyayTdnnpkQqi32lt
+/Sv/OcKOUKlCAqmABwcEn/c/KT+MwSeJRKDQAccXfExBi6uU7qERikQmUQhK
+4Hfi7yn+tyrZWMv1WCw7BjN+0IhOP/mP57+1/jMjdFFBwGm1tMoLyimj64m0
+aJecDrHR/vQfU1xrjsM4a4ksN81y0zeWTuV6jmW9uM4PKCAwAiIwkqFjwUJM
+Lnk2CPKObJG0hd+2jAiWhRv7yJX8FqmaDPAWSUZAE2ZrFGbrucmLb7ZT89zX
+yqsz0IeNiUGw4WcCEUaDvDgNVxl/96MpvQ1SJK7SAbuLTriElTQ4xCgpWrY6
+THqIS2LJMJwzGd3xhQ==
 ====
